--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/10000hours.css">   
+    <link rel="stylesheet" type="text/css" href="css/10000hours.css">
+    <script type="module">
+        import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+        const el = document.createElement('pwa-update');
+        document.body.appendChild(el);
+     </script>
     <title>1만 시간의 법칙</title>
 </head>
+
 <body>
     <section id="contents">
         <div class="wrapper">
@@ -101,4 +109,5 @@
     </section>
     <script type="text/javascript" src="js/10000hours.js"></script>
 </body>
+
 </html>
